--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,26 +9,42 @@
 			<div class="page-header">
 				<h1>Infinity-scroll Demo</h1>
 			</div>
-			<infinity-scroll width="17" show-info-delay="2000" total="ctrl.items.length" ng-begin="ctrl.begin" ng-limit="ctrl.limit" 
-								  style="border:solid 1px black; height: 300px">
-				<table class="table table-hover table-striped">
-					<thead>
-						<tr>
-							<th style="width:30px">First</th>
-							<th style="width:20px">2e</th>
-							<th>Third</th>
-							<th>Fourth</th>
-							<th style="width:50px">Last</th>
-							<th style="width:20px"></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="item in ctrl.items | limitTo:ctrl.limit:ctrl.begin">
-							<td ng-bind="item"></td><td><span class="glyphicon glyphicon-user"></span></td><td>Mark</td><td>Otto</td><td>@mdo</td><td><span class="glyphicon glyphicon-adjust"></span></td>
-						</tr>
-					</tbody>
-				</table>
-			</infinity-scroll>
+			<div class="row">
+				<div class="col-xs-4">
+					<div class="list-group">
+						<a href="#" class="list-group-item" ng-repeat="cat in ctrl.categories" 
+							ng-click="ctrl.selectCategory(cat)"
+							ng-class="{active:ctrl.selectedCategory === cat}">
+							<span class="glyphicon glyphicon-folder-close" ng-class="{'glyphicon-folder-open':ctrl.selectedCategory === cat}"></span>&nbsp;&nbsp;
+							<span ng-bind="cat.name"></span>
+							<span class="badge" ng-bind="cat.nb"></span>
+						</a>
+					</div>			
+				</div>
+				<div class="col-xs-8">
+					<infinity-scroll scrollbar-size="12" show-info-delay="2000" total="ctrl.items.length" 
+										  ng-begin="ctrl.begin" ng-limit="ctrl.limit"
+										  style="border:solid 1px black; height: 300px">
+						<table class="table table-hover table-striped">
+							<thead>
+								<tr>
+									<th style="width:30px">First</th>
+									<th style="width:20px">2e</th>
+									<th>Third</th>
+									<th>Fourth</th>
+									<th style="width:50px">Last</th>
+									<th style="width:20px"></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr ng-repeat="item in ctrl.items| limitTo:ctrl.limit:ctrl.begin">
+									<td ng-bind="item"></td><td><span class="glyphicon glyphicon-user"></span></td><td>Mark</td><td>Otto</td><td>@mdo</td><td><span class="glyphicon glyphicon-adjust"></span></td>
+								</tr>
+							</tbody>
+						</table>
+					</infinity-scroll>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
