--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,9 +22,10 @@
 					</div>			
 				</div>
 				<div class="col-xs-8">
+					<input type="number" class="form-control" placeholder="Text input" ng-model="ctrl.height">
 					<infinity-scroll scrollbar-size="12" show-info-delay="2000" total="ctrl.items.length" 
-										  ng-begin="begin" ng-limit="limit"
-										  style="border:solid 1px black; height: 300px">
+										  ng-begin="begin" ng-limit="limit" height="ctrl.height"
+										  style="border:solid 1px black">
 						<table class="table table-hover table-striped">
 							<thead>
 								<tr>
