--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,9 +22,10 @@
 					</div>			
 				</div>
 				<div class="col-xs-8">
-					<input type="number" class="form-control" placeholder="Text input" ng-model="ctrl.height">
+					<input type="number" class="form-control input-lg" placeholder="Text input" ng-model="ctrl.height">
 					<infinity-scroll scrollbar-size="12" show-info-delay="2000" total="ctrl.items.length" 
 										  ng-begin="begin" ng-limit="limit" height="ctrl.height"
+										  tag-items="tr"
 										  style="border:solid 1px black">
 						<table class="table table-hover table-striped">
 							<thead>
@@ -39,7 +40,7 @@
 							</thead>
 							<tbody>
 								<tr ng-repeat="item in ctrl.items| limitTo:limit:begin">
-									<td ng-bind="item"></td><td><span class="glyphicon glyphicon-user"></span></td><td>Mark</td><td>Otto</td><td>@mdo</td><td><span class="glyphicon glyphicon-adjust"></span></td>
+									<td ng-bind="item" ng-style="{height:!$index&&!begin?80:none}"></td><td><span class="glyphicon glyphicon-user"></span></td><td>Mark</td><td>Otto</td><td>@mdo</td><td><span class="glyphicon glyphicon-adjust"></span></td>
 								</tr>
 							</tbody>
 						</table>
