--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,9 +10,28 @@
 				<h1>Infinity-scroll Demo</h1>
 			</div>
 			<div class="row">
-				<div class="col-xs-4">
-					<div class="list-group">
-						<a href="#" class="list-group-item" ng-repeat="cat in ctrl.categories" 
+				<div class="col-xs-5">
+					<!-- Split button -->
+					<div class="btn-group">
+						<button type="button" class="btn">Directories</button>
+						<button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<span class="caret"></span>
+							<span class="sr-only">Toggle Dropdown</span>
+						</button>
+						<ul class="dropdown-menu" infinity-scroll scrollbar-size="sm" show-info-delay="2000" 
+							 total="ctrl.categories.length" tag-items="li"
+							 ng-begin="begin1" ng-limit="limit1" height="100">
+							<li ng-repeat="cat in ctrl.categories| limitTo:limit1:begin1">
+								<a href="#" ng-bind="cat.name">
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div infinity-scroll class="list-group" scrollbar-size="sm" show-info-delay="2000" total="ctrl.categories.length" 
+						  ng-begin="begin0" ng-limit="limit0" height="300"
+						  tag-items="a"
+						  style="border:solid 1px black">
+						<a href="#" class="list-group-item" ng-repeat="cat in ctrl.categories| limitTo:limit0:begin0" 
 							ng-click="ctrl.selectCategory(cat)"
 							ng-class="{active:ctrl.selectedCategory === cat}">
 							<span class="glyphicon glyphicon-folder-close" ng-class="{'glyphicon-folder-open':ctrl.selectedCategory === cat}"></span>&nbsp;&nbsp;
@@ -21,9 +40,9 @@
 						</a>
 					</div>			
 				</div>
-				<div class="col-xs-8">
+				<div class="col-xs-7">
 					<input type="number" class="form-control input-lg" placeholder="Text input" ng-model="ctrl.height">
-					<infinity-scroll scrollbar-size="12" show-info-delay="2000" total="ctrl.items.length" 
+					<infinity-scroll scrollbar-size="sm" show-info-delay="2000" total="ctrl.items.length" 
 										  ng-begin="begin" ng-limit="limit" height="ctrl.height"
 										  tag-items="tr"
 										  style="border:solid 1px black">
@@ -40,7 +59,7 @@
 							</thead>
 							<tbody>
 								<tr ng-repeat="item in ctrl.items| limitTo:limit:begin">
-									<td ng-bind="item" ng-style="{height:!$index&&!begin?80:none}"></td><td><span class="glyphicon glyphicon-user"></span></td><td>Mark</td><td>Otto</td><td>@mdo</td><td><span class="glyphicon glyphicon-adjust"></span></td>
+									<td ng-bind="item" sng-style="{height:!$index && !begin?80:none}"></td><td><span class="glyphicon glyphicon-user"></span></td><td>Mark</td><td>Otto</td><td>@mdo</td><td><span class="glyphicon glyphicon-adjust"></span></td>
 								</tr>
 							</tbody>
 						</table>
