--- a/src/infinityscroll.css
+++ b/src/infinityscroll.css
@@ -1,25 +1,24 @@
+[infinity-scroll] {
+}
 infinity-scroll {
 	display: block;
-	height: 100%;
-	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4gEZDw8Zb4bSvgAAAB1pVFh0Q29tbWVudAAAAAAAQ3JlYXRlZCB3aXRoIEdJTVBkLmUHAAAADElEQVQI12M4cOAAAASEAkEwrrB4AAAAAElFTkSuQmCC');
-	background-repeat: no-repeat;
-	background-size: 4px 100%;
-	background-position: right 0%;
-	overflow-y: hidden;
 	position:relative;
 }
-infinity-scroll > ng-transclude {
-	display: block;
-	width: calc(100% - 4px);	
+[infinity-scroll], infinity-scroll {
+	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4gEZDw8Zb4bSvgAAAB1pVFh0Q29tbWVudAAAAAAAQ3JlYXRlZCB3aXRoIEdJTVBkLmUHAAAADElEQVQI12M4cOAAAASEAkEwrrB4AAAAAElFTkSuQmCC');
+	background-repeat: no-repeat;
+	background-position: right 0%;
+	overflow-y: hidden;
 }
-infinity-scroll[hover] {
+[infinity-scroll][hover], infinity-scroll[hover] {
 	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4gEZDw83s1DfcQAAAB1pVFh0Q29tbWVudAAAAAAAQ3JlYXRlZCB3aXRoIEdJTVBkLmUHAAAADElEQVQI12NYuXIlAAP6Afx7V39BAAAAAElFTkSuQmCC');
 }
-infinity-scroll[drag] {
+[infinity-scroll][drag], infinity-scroll[drag] {
 	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4gEZDxAQ2wBkhAAAAB1pVFh0Q29tbWVudAAAAAAAQ3JlYXRlZCB3aXRoIEdJTVBkLmUHAAAADElEQVQI12OorKwEAALaAWyeCJ/eAAAAAElFTkSuQmCC');
 }
-infinity-scroll span.infos-crolling {
+[infinity-scroll] > span.infos-crolling, infinity-scroll > span.infos-crolling {
 	display: inline-block;
+	width: auto;
 	position:absolute;
 	bottom:10px;
 	right:10px;
@@ -35,4 +34,28 @@ infinity-scroll span.infos-crolling {
 	vertical-align: middle;
 	background-color: #777;
 	border-radius: 10px;
+}
+[infinity-scroll], infinity-scroll {
+	background-size: 16px 100%;
+}
+[infinity-scroll] > *, infinity-scroll > * {
+	width: calc(100% - 16px);	
+}
+[infinity-scroll][scrollbar-size='xs'], infinity-scroll[scrollbar-size='xs'] {
+	background-size: 4px 100%;
+}
+[infinity-scroll][scrollbar-size='xs'] > *, infinity-scroll[scrollbar-size='xs'] > * {
+	width: calc(100% - 4px);	
+}
+[infinity-scroll][scrollbar-size='sm'], infinity-scroll[scrollbar-size='sm'] {
+	background-size: 8px 100%;
+}
+[infinity-scroll][scrollbar-size='sm'] > *, infinity-scroll[scrollbar-size='sm'] > * {
+	width: calc(100% - 8px);	
+}
+[infinity-scroll][scrollbar-size='lg'], infinity-scroll[scrollbar-size='lg'] {
+	background-size: 20px 100%;
+}
+[infinity-scroll][scrollbar-size='lg'] > *, infinity-scroll[scrollbar-size='lg'] > * {
+	width: calc(100% - 20px);	
 }
