--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,7 +20,7 @@
 						</button>
 						<ul class="dropdown-menu" infinity-scroll scrollbar-size="sm" show-info-delay="2000" 
 							 total="ctrl.categories.length" tag-items="li"
-							 ng-begin="begin1" ng-limit="limit1" height="100">
+							 ng-begin="begin1" ng-limit="limit1" size="100">
 							<li ng-repeat="cat in ctrl.categories| limitTo:limit1:begin1">
 								<a href="#" ng-bind="cat.name">
 								</a>
@@ -28,7 +28,7 @@
 						</ul>
 					</div>
 					<div infinity-scroll class="list-group" scrollbar-size="sm" show-info-delay="2000" total="ctrl.categories.length" 
-						  ng-begin="begin0" ng-limit="limit0" height="300"
+						  ng-begin="begin0" ng-limit="limit0" size="300"
 						  tag-items="a"
 						  style="border:solid 1px black">
 						<a href="#" class="list-group-item" ng-repeat="cat in ctrl.categories| limitTo:limit0:begin0" 
@@ -43,7 +43,7 @@
 				<div class="col-xs-7">
 					<input type="number" class="form-control input-lg" placeholder="Text input" ng-model="ctrl.height">
 					<infinity-scroll scrollbar-size="sm" show-info-delay="2000" total="ctrl.items.length" 
-										  ng-begin="begin" ng-limit="limit" height="ctrl.height"
+										  ng-begin="begin" ng-limit="limit" size="ctrl.height"
 										  tag-items="tr"
 										  style="border:solid 1px black">
 						<table class="table table-hover table-striped">
@@ -63,6 +63,15 @@
 								</tr>
 							</tbody>
 						</table>
+					</infinity-scroll>
+					<infinity-scroll class="scroll-horizontal" scrollbar-size="sm" show-info-delay="2000" total="ctrl.items.length" 
+										  ng-begin="begin2" ng-limit="limit2" size="300" tag-items="div"
+										  style="border:solid 1px black;height: 60px;padding-top: 16px">
+						<div ng-repeat="item in ctrl.items| limitTo:limit2:begin2" class="alert alert-info" style="display: initial">
+							<span class="glyphicon glyphicon-user"></span>
+							<span ng-bind="item"></span>
+							<span>Mark</span>
+						</div>
 					</infinity-scroll>
 				</div>
 			</div>
