--- a/src/index.ejs
+++ b/src/index.ejs
@@ -42,7 +42,7 @@
 				</div>
 				<div class="col-xs-7">
 					<input type="number" class="form-control input-lg" placeholder="Text input" ng-model="ctrl.height">
-					<infinity-scroll scrollbar-size="sm" show-info-delay="2000" total="ctrl.items.length" 
+					<infinity-scroll show-info-delay="2000" total="ctrl.items.length" 
 										  ng-begin="begin" ng-limit="limit" size="ctrl.height"
 										  tag-items="tr"
 										  style="border:solid 1px black">
